--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,9 @@
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -99,7 +101,9 @@
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -136,7 +140,9 @@
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -173,7 +179,9 @@
             android:layout_columnWeight="1"
             android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            app:cardElevation="5dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
