--- a/app/src/main/res/layout/activity_series.xml
+++ b/app/src/main/res/layout/activity_series.xml
@@ -19,7 +19,9 @@
                 android:id="@+id/btnBackSeries"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_baseline_arrow_back_24"/>
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"/>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
