--- a/app/src/main/res/layout/activity_comics.xml
+++ b/app/src/main/res/layout/activity_comics.xml
@@ -116,7 +116,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter2"
+                    android:id="@+id/cvComic2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="1"
@@ -204,7 +204,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter4"
+                    android:id="@+id/cvComic4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="3"
@@ -248,7 +248,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter5"
+                    android:id="@+id/cvComic5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="4"
@@ -292,7 +292,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter6"
+                    android:id="@+id/cvComic6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="5"
@@ -336,7 +336,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter7"
+                    android:id="@+id/cvComic7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="6"
@@ -380,7 +380,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter8"
+                    android:id="@+id/cvComic8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="7"
@@ -424,7 +424,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter9"
+                    android:id="@+id/cvComic9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="8"
@@ -468,7 +468,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter10"
+                    android:id="@+id/cvComic10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="9"
@@ -512,7 +512,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter11"
+                    android:id="@+id/cvComic11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="10"
@@ -556,7 +556,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter12"
+                    android:id="@+id/cvComic12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="11"
@@ -600,7 +600,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter13"
+                    android:id="@+id/cvComic13"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="12"
@@ -644,7 +644,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter14"
+                    android:id="@+id/cvComic14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="13"
@@ -688,7 +688,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter15"
+                    android:id="@+id/cvComic15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="14"
@@ -732,7 +732,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvCharacter16"
+                    android:id="@+id/cvComic16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="15"
