--- a/app/src/main/res/layout/activity_character3.xml
+++ b/app/src/main/res/layout/activity_character3.xml
@@ -65,4 +65,16 @@
         android:text="@string/characters_intro"
         android:fontFamily="@font/montserrat_medium"/>
 
+    <TextView
+        android:id="@+id/tvAttribution"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:text="@string/attribution"
+        android:fontFamily="@font/montserrat_medium"/>
+
 </LinearLayout>
