--- a/app/src/main/res/layout/activity_comics.xml
+++ b/app/src/main/res/layout/activity_comics.xml
@@ -68,7 +68,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:rowCount="20">
 
                 <androidx.cardview.widget.CardView
@@ -777,6 +776,19 @@
                 </androidx.cardview.widget.CardView>
 
             </GridLayout>
+
+            <TextView
+                android:id="@+id/tvAttribution"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:text="@string/attribution"
+                android:fontFamily="@font/montserrat_medium"/>
 
         </LinearLayout>
 
