--- a/app/src/main/res/layout/activity_series.xml
+++ b/app/src/main/res/layout/activity_series.xml
@@ -67,11 +67,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:rowCount="20">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cvEvent1"
+                    android:id="@+id/cvSerie1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="0"
@@ -95,7 +94,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie1"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -139,7 +138,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie2"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -183,7 +182,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie3"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -227,7 +226,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie4"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -271,7 +270,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie5"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -315,7 +314,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie6"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -359,7 +358,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie7"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -403,7 +402,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie8"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -447,7 +446,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie9"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -491,7 +490,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie10"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -536,7 +535,7 @@
                         android:layout_gravity="center_vertical|center_horizontal">
                         <ImageView
                             android:id="@+id/ivSerie11"
-                            android:layout_width="120dp"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/categories4"/>
@@ -556,6 +555,19 @@
                 </androidx.cardview.widget.CardView>
 
             </GridLayout>
+
+            <TextView
+                android:id="@+id/tvAttribution"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:text="@string/attribution"
+                android:fontFamily="@font/montserrat_medium"/>
 
         </LinearLayout>
 
